实现 force_loadevent 战斗配置选项

--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -1,5 +1,5 @@
 ﻿//--------------------------------------------------------------
-// Pandas 的战斗配置选项
+// Pandas 战斗配置选项
 //--------------------------------------------------------------
 //   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
 // 百分比选项: 填写100即表示100%
@@ -8,5 +8,18 @@
 //             掩码选项一个数值可以表示里面有多个内容. 
 //             例如: 若想表示玩家和宠物, 只需填写 5 即可 (1 + 4)
 //--------------------------------------------------------------
+
+// 是否强制没有 loadevent 标记的地图
+// 也能触发 OnPCLoadMapEvent 事件? [开关选项]
+// 
+// 在一般情况下, 只有地图添加了 loadevent 标记之后,
+// 玩家进入这张地图时才会自动触发 OnPCLoadMapEvent 事件.
+// 
+// 如果将此选项改成 yes 的话, 那么无论地图是否拥有 loadevent 标记,
+// 都会触发 OnPCLoadMapEvent 事件.
+// 
+// 若将此选项改成 no 的话 (默认值),
+// 那么必须显式的给地图赋予 loadevent 标记, 才会触发 OnPCLoadMapEvent 事件.
+force_loadevent: no
 
 // PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
