--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -2,7 +2,7 @@
 // Pandas 战斗配置选项
 //--------------------------------------------------------------
 //   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
-// 百分比选项: 填写100即表示100%
+// 百分比选项: 填写 100 即表示 100%
 //   掩码选项: 没有特殊说明的情况下, 默认用来表示游戏中各单位的类型
 //             1: 玩家, 2: 魔物, 4: 宠物, 8: 生命体, 16:佣兵
 //             掩码选项一个数值可以表示里面有多个内容. 
@@ -21,5 +21,20 @@
 // 若将此选项改成 no 的话 (默认值),
 // 那么必须显式的给地图赋予 loadevent 标记, 才会触发 OnPCLoadMapEvent 事件.
 force_loadevent: no
+
+// 强制特定渠道获得的装备自动变成已鉴定 [掩码选项]
+// 
+//   &1: 使用 getgroupitem 获得的装备(部分箱子使用该指令)
+//   &2: 打死魔物, 魔物道具掉落到地上的装备
+//   &4: 打死魔物, 掉落到玩家背包中的MVP奖励(装备)
+//   &8: 使用“偷窃”技能偷到的装备
+//  &16: 在完成任务的过程中, 通过任务系统获得的装备(详见 db/[pre-]re/quest_db.txt 的注释)
+//  &32: 通过 makeitem / makeitem2 / makeitem3 在地面上创造出的装备
+//  &64: 使用 getrandgroupitem 获得的装备(部分箱子使用该指令)
+// &128: 通过 getitem2 / getitem3 / getitembound2 / getitembound3 创造出的装备
+// &256: 通过 rentitem2 / rentitem3 创造出的装备
+// 
+// 此选项默认值为 0. 若想启用以上全部, 请直接填写 511 即可.
+force_identified: 0
 
 // PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
