实现 cash_mounting_use_item_limit 战斗配置选项

--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -37,4 +37,23 @@ force_loadevent: no
 // 此选项默认值为 0. 若想启用以上全部, 请直接填写 511 即可.
 force_identified: 0
 
+// 当玩家乘坐商城坐骑后, 是否禁止使用物品 [掩码选项]
+//
+//   &1: 禁止使用“治愈类物品”, 物品类型编号为 0
+//   &2: 禁止使用“可用类物品”, 物品类型编号为 2
+//   &4: 禁止使用“盔甲/披肩/鞋子/头饰/装饰品等防具”, 物品类型编号为 4
+//   &8: 禁止使用“武器”, 物品类型编号为 5
+//  &16: 禁止使用“卡片类物品”, 物品类型编号为 6
+//  &32: 禁止使用“箭矢类物品 (箭矢/子弹/其他)”, 物品类型编号为 10
+//  &64: 禁止使用“延迟消耗类物品”, 物品类型编号为 11
+// &128: 禁止使用“影子装备”, 物品类型编号为 12
+// &256: 禁止使用“商城物品”, 物品类型编号为 18
+//
+// 当某种物品被禁止使用后, 从物品栏双击此类物品时, 什么事情都不会发生,
+// 并且会在玩家的聊天栏中显示出 conf/msg_conf/pandas_map_msg.conf 中消息
+// 编号为 2003 的提示信息. 
+//
+// rAthena 默认禁止在坐骑的时候使用“延迟消耗类物品”, 因此该选项的默认值为 64
+cash_mounting_use_item_limit: 64
+
 // PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
