缩短 cash_mounting_use_item_limit 战斗配置选项的名称

--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -54,6 +54,6 @@ force_identified: 0
 // 编号为 2003 的提示信息. 
 //
 // rAthena 默认禁止在坐骑的时候使用“延迟消耗类物品”, 因此该选项的默认值为 64
-cash_mounting_use_item_limit: 64
+cashmount_useitem_limit: 64
 
 // PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
