实现一系列用来控制角色称号的脚本指令\GM指令\事件过滤器

--- a/conf/msg_conf/pandas_map_msg.conf
+++ b/conf/msg_conf/pandas_map_msg.conf
@@ -1,38 +1,50 @@
-﻿// @reloadloginconf
-2000: 已重新加载登录服务器配置文件中的VIP玩家组别选项
+﻿//===== Pandas Map-Server Message ============================
+//= 地图服务器消息库
+//===== By: ==================================================
+//= 熊猫模拟器开发团队
+//===== Current Version: =====================================
+//= 1.0
+//===== Description: =========================================
+//= 用于配置地图服务器使用到的一些信息文本 (避免硬编码)
+//= 注意: 此配置文件与 rAthenaCN 的消息编号不兼容, 请避免复用
+//============================================================
 
-// @showzeny
-// 使用 @showzeny 显示金币变化后, 每当金币有变化时的提示文本
-2001: 消费了 %dz.
-2002: 获得了 %dz.
+//// @reloadloginconf
+//2000: 已重新加载登录服务器配置文件中的VIP玩家组别选项
+//
+//// @showzeny
+//// 使用 @showzeny 显示金币变化后, 每当金币有变化时的提示文本
+//2001: 消费了 %dz.
+//2002: 获得了 %dz.
 
-// 启用 conf/battle/extend.conf 的 cash_mounting_use_item_limit 选项后
+// 启用 conf/battle/pandas.conf 的 cashmount_useitem_limit 选项后
 // 在“商城坐骑”上使用被禁止道具时的提示文本
 2003: 很抱歉, 当您坐上“商城坐骑”时, 无法使用: %s
 
-// @reloadmannerdb
-2004: 已重新加载敏感词库
-
-// 与“聊天内容敏感词过滤机制”相关的提示文本
-2005: 您发送的内容包含敏感内容, 请调整后重发.
-2006: 您发送的内容包含敏感内容, 您将被禁言一段时间.
-2007: 您发送的内容包含敏感内容, 您将被封号游戏一段时间.
-
-// 配合消息编号为423的文本而提取的信息,
-// 以便完整翻译“您的%s已经被限时封号, 持续到 %s” 这句提示
-2008: 角色
-2009: 账号
-2010: %Y-%m-%d %H:%M:%S
-
-// 无权使用GM指令的话给予什么提示
-// 配合 conf/battle/extend.conf 的 no_permission_cmd_process_mode 选项使用
-2011: 您不能这么做, 要乖乖的哟...
+//// @reloadmannerdb
+//2004: 已重新加载敏感词库
+//
+//// 与“聊天内容敏感词过滤机制”相关的提示文本
+//2005: 您发送的内容包含敏感内容, 请调整后重发.
+//2006: 您发送的内容包含敏感内容, 您将被禁言一段时间.
+//2007: 您发送的内容包含敏感内容, 您将被封号游戏一段时间.
+//
+//// 配合消息编号为423的文本而提取的信息,
+//// 以便完整翻译“您的%s已经被限时封号, 持续到 %s” 这句提示
+//2008: 角色
+//2009: 账号
+//2010: %Y-%m-%d %H:%M:%S
+//
+//// 无权使用GM指令的话给予什么提示
+//// 配合 conf/battle/extend.conf 的 no_permission_cmd_process_mode 选项使用
+//2011: 您不能这么做, 要乖乖的哟...
 
 // @title
 2012: 使用方法: @title <称号ID, 若设为 0 则取消称号>
-2013: 称号已更换完毕.
-2014: 称号已取消.
-2015: 很抱歉, 您的客户端版本低于 20150513, 无法使用该指令.
+2013: 若想了解称号ID对应的称号, 请查询于客户端的数据文件: data\luafiles514\lua files\datainfo\titletable.lub
+2014: 称号已更换完毕.
+2015: 称号已取消.
+2016: 很抱歉, 您的客户端版本低于 20150513, 无法使用该指令.
 
 // @recallmap
 2016: 已召唤指定地图的全部玩家!
@@ -43,14 +55,14 @@
 // 当地图被设置了 nocapture 标记后, 玩家使用宠物捕捉道具时的提示文本
 2018: 此地图禁止捕捉宠物.
 
-// 此选项是为 db\item_announce.txt 中的第 2 个触发时机设计的
-// 即 “打死魔物，掉落MVP奖励到玩家的背包时公告”
-2019: %s 获得了 %s 掉落的 %s (掉率为: %0.02f%%)
-
-// 使用@mapinfo指令查看地图信息时
-// restricted 和 mobinfo 地图标记显示的文本信息
-2020: 在魔物名称中显示附加信息 (配置值为 %d)
-2021: 地图区域划分, 区域编号(Restricted zone)为: %d
+//// 此选项是为 db\item_announce.txt 中的第 2 个触发时机设计的
+//// 即 “打死魔物，掉落MVP奖励到玩家的背包时公告”
+//2019: %s 获得了 %s 掉落的 %s (掉率为: %0.02f%%)
+//
+//// 使用@mapinfo指令查看地图信息时
+//// restricted 和 mobinfo 地图标记显示的文本信息
+//2020: 在魔物名称中显示附加信息 (配置值为 %d)
+//2021: 地图区域划分, 区域编号(Restricted zone)为: %d
 
 // 在 conf/battle/monster.conf 中
 // 设定 show_mob_info 让魔物名称显示更多魔物信息时显示的文本信息
@@ -58,7 +70,7 @@
 //
 // --------------------------------------------------------------
 // 为了获得最佳展现效果,
-// Pandas 对下列选项的字符长度有以下建议:
+// 熊猫模拟器对下列选项的字符长度有以下建议:
 // --------------------------------------------------------------
 // - 体型保持不超过1个汉字
 // - 种族保持不超过2个汉字
@@ -95,39 +107,39 @@
 2061: 不死
 // 2062-2080 预留给未来可能出现出现的新属性使用
 
-// @reloadpolicies
-2081: 已重新加载行为策略数据库
-
-// @policy
-2082: 使用方法: @policy <行为策略编号>
-2083: 指定的行为策略不存在.
-2084: 您的行为策略已变更成功.
-2085: | 行为策略: %d
-
-// @eventrpt
-2086: 事件名称                   次数         总耗时(ms)   平均耗时(ms)   最高单次耗时
-2087: %-26s %-12d %-12d %-14.2f %-12d
-2088: =======================================================================================
-2089: 目前共有 %d 个事件被触发, 共触发 %d 次, 处理事件累积总耗时: %d 毫秒
-
-// @version
-2090: Pandas 版本: %s (运行模式: %s)
-2091: 客户端版本: %d | 定制编号: %s | 邮箱: %s
-2092: 复兴前
-2093: 复兴后
-2094: 暂无
+//// @reloadpolicies
+//2081: 已重新加载行为策略数据库
+//
+//// @policy
+//2082: 使用方法: @policy <行为策略编号>
+//2083: 指定的行为策略不存在.
+//2084: 您的行为策略已变更成功.
+//2085: | 行为策略: %d
+//
+//// @eventrpt
+//2086: 事件名称                   次数         总耗时(ms)   平均耗时(ms)   最高单次耗时
+//2087: %-26s %-12d %-12d %-14.2f %-12d
+//2088: =======================================================================================
+//2089: 目前共有 %d 个事件被触发, 共触发 %d 次, 处理事件累积总耗时: %d 毫秒
+//
+//// @version
+//2090: 熊猫模拟器版本: %s (运行模式: %s)
+//2091: 客户端版本: %d | 定制编号: %s | 邮箱: %s
+//2092: 复兴前
+//2093: 复兴后
+//2094: 暂无
 
 // 当地图被设置了 nomail 标记后, 玩家被禁用邮箱功能的提示文本
 2095: 此地图禁止使用邮箱及其相关功能!
 
-// 当地图被设置了 nopet 标记后, 宠物被回收和禁止孵化的提示文本
-2096: 此地图禁止使用宠物, 已将你的宠物恢复为蛋状态.
-2097: 此地图禁止使用宠物, 由于背包已满无法将宠物恢复为蛋状态, 所以宠物已被临时冻结.
-2098: 此地图禁止使用宠物!
-
-// 存在与其他NPC的对话框时禁止点击大乐透按钮的提示文本
-// 仅用于复兴前, 复兴后使用的是客户端 msgstringtable.txt 中消息编号为 1923 的文本
-2099: 正在与其他 NPC 对话时无法使用此功能, 请结束与当前 NPC 的对话后, 再试一次.
+//// 当地图被设置了 nopet 标记后, 宠物被回收和禁止孵化的提示文本
+//2096: 此地图禁止使用宠物, 已将你的宠物恢复为蛋状态.
+//2097: 此地图禁止使用宠物, 由于背包已满无法将宠物恢复为蛋状态, 所以宠物已被临时冻结.
+//2098: 此地图禁止使用宠物!
+//
+//// 存在与其他NPC的对话框时禁止点击大乐透按钮的提示文本
+//// 仅用于复兴前, 复兴后使用的是客户端 msgstringtable.txt 中消息编号为 1923 的文本
+//2099: 正在与其他 NPC 对话时无法使用此功能, 请结束与当前 NPC 的对话后, 再试一次.
 
 // 使用 @mapinfo 指令时, 作为 Pandas 专有的普通地图标记
-2100: Pandas 地图标记:
+2100: 熊猫地图标记:
