修正 title 管理员指令给出的提示不正确的问题

--- a/conf/msg_conf/pandas_map_msg.conf
+++ b/conf/msg_conf/pandas_map_msg.conf
@@ -41,7 +41,7 @@
 
 // @title
 2012: 使用方法: @title <称号ID, 若设为 0 则取消称号>
-2013: 若想了解称号ID对应的称号, 请查询于客户端的数据文件: data\luafiles514\lua files\datainfo\titletable.lub
+2013: 称号ID与称号的对照表位于客户端: data\luafiles514\lua files\datainfo\titletable.lub
 2014: 称号已更换完毕.
 2015: 称号已取消.
 2016: 很抱歉, 您的客户端版本低于 20150513, 无法使用该指令.
