翻译登录, 角色, 地图服务器的主要配置文件的大部分选项

--- a/conf/map_athena.conf
+++ b/conf/map_athena.conf
@@ -1,142 +1,205 @@
 ﻿//--------------------------------------------------------------
-//rAthena Map-Server Configuration File
+// 熊猫模拟器 - 地图服务器配置文件
+// 本配置文件由 Peter Kieser <pfak@telus.net> 翻译成英文
+// 由熊猫模拟器开发团队翻译成中文并加以润色
+//--------------------------------------------------------------
+// 提示: 此配置文件中, 只要是以 // 作为开头的行, 都是注释信息. 
+// 注释信息您可以随意修改, 不会干扰服务器的任何行为. 
 //--------------------------------------------------------------
 
-// Note: "Comments" are all text on the right side of a double slash "//"
-// Whatever text is commented will not be parsed by the servers, and serves
-// only as information/reference.
-
-//--------------------------------------------------------------
-//                     Configuration Info
-//--------------------------------------------------------------
-// Interserver communication passwords, set in account.txt (or equiv.)
+// 登录、角色、地图服务器之间内部通讯的账号密码
+// 此处的值必须和数据库中 login 表那条性别为 S 的记录一致,
+// 否则会导致三个服务器之间无法进行内部通讯
 userid: s1
 passwd: p1
 
-// Character Server IP
-// The map server connects to the character server using this IP address.
-// NOTE: This is useful when you are running behind a firewall or are on
-// a machine with multiple interfaces.
+// 角色服务器的 IP 地址
+// 地图服务器会依赖这个 IP 地址去和角色服务器建立连接.
+// 
+// 提醒: 若您想启用 char_ip 选项的话, 记得去掉 char_ip 前面的注释符 //,
+//       否则服务器会忽略它, 导致配了和没配一样. 
 //char_ip: 127.0.0.1
 
-// The map server listens on the interface with this IP address.
-// NOTE: This allows you to run multiple servers on multiple interfaces
-// while using the same ports for each server.
+// 地图服务器绑定的 IP 地址
+// 若启用了此选项, 那么地图服务器只会监听来自这个 IP 地址的网卡数据.
+// 
+// 注意: 该选项允许你在有多个公网网卡(也意味着有多个公网IP)的机器上, 
+//       使用相同的"地图服务器端口"来开多个服. 
+// 提醒: 若您想启用 bind_ip 选项的话, 记得去掉 bind_ip 前面的注释符 //,
+//       否则服务器会忽略它, 导致配了和没配一样. 
 //bind_ip: 127.0.0.1
 
-// Character Server Port
+// 角色服务器端口
+// 地图服务器会根据此处的配置和角色服务器建立连接
 char_port: 6121
 
-// Map Server IP
-// The IP address which clients will use to connect.
-// Set this to what your server's public IP address is.
+// 地图服务器的 IP 地址
+// 当玩家通过角色服务器选择角色之后, 会将这里设置的 IP 地址发送给客户端.
+// 客户端将会使用这里配置的 IP 地址来和地图服务器建立连接. 
+// 若您想对外开服(而不是开单机服)的话, 请把您的公网 IP 地址设置到这里. 
+// 
+// 提醒: 若您想启用 map_ip 选项的话, 记得去掉 map_ip 前面的注释符 //,
+//       否则服务器会忽略它, 导致配了和没配一样. 
 //map_ip: 127.0.0.1
 
-// Map Server Port
+// 地图服务器端口 (默认端口为: 5121)
+// 此端口会开放给游戏客户端建立连接
 map_port: 5121
 
-//Time-stamp format which will be printed before all messages.
-//Can at most be 20 characters long.
-//Common formats:
-// %I:%M:%S %p (hour:minute:second 12 hour, AM/PM format)
-// %H:%M:%S (hour:minute:second, 24 hour format)
-// %d/%b/%Y (day/Month/year)
-//For full format information, consult the strftime() manual.
+// 往控制台窗口中显示内容时, 在每行信息的前面加上时间戳. 
+// 最终组成的时间最大长度不能超过 20 个字符.
+//  
+// 常用的时间格式有:
+//    %I:%M:%S %p (小时:分钟:秒数 12小时制, 会携带AM或PM标记)
+//    %H:%M:%S (小时:分钟:秒数, 24小时制)
+//    %d/%b/%Y (日期/月份/年份)
+// 更多的格式信息, 请参考 C 语言的 strftime 函数用法. 
+// 
+// rAthena 官方默认值是 [%d/%b %H:%M] 也就是24小时制的 [日/月 时:分]
+// 这明显不符合国人习惯, 为此熊猫模拟器将其默认值改成了 [%Y/%m/%d %H:%M] 
+// 
+// 若想启用时间戳的话, 请将下面这一行头部的注释符//去掉
 //timestamp_format: [%d/%b %H:%M]
 
-//If redirected output contains escape sequences (color codes)
+// 当服务端程序被一些启动器 (LeeStarter) 运行, 从而导致输出信息被重定向时, 
+// 是否也将颜色代码一同输出? 
+// 
+// 问: 这里提到的重定向是指什么? 
+// 答: 原本地图服务器的信息将直接显示到控制台窗口, 不过若使用一些启动工具
+//     来启动地图服务器的话, 原本应该显示到控制台的信息, 就会被"劫持"到了
+//     启动工具里面显示, 这种情况称之为"输出信息被重定向了"!
+// 
+// 问: 这里提到的颜色代码是指什么? 
+// 答: 在我们查看控制台的过程中, 会发现类似 [Status] 的字是绿色的, 
+//     而 [Error] 是红色的. 这是因为在程序往控制台输出信息时, 加入了一些
+//     颜色编码的缘故. 比如, 若使用颜色编码 "\033[1;31m" 那么则表示接下来的
+//     字符用红色输出. 其实有点类似我们脚本中使用的 ^xxxxxx 颜色代码. 
+// 
+// 此选项一般情况下推荐关闭, 因为基本没什么启动器支持着色
 stdout_with_ansisequence: no
 
-//Makes server log selected message types to a file in the /log/ folder
-//1: Log Warning Messages
-//2: Log Error and SQL Error messages.
-//4: Log Debug Messages
-//Example: "console_msg_log: 7" logs all 3 kinds
-//Messages logged by this overrides console_silent setting
+// 记录地图服务器在控制台中产生的部分信息到 /log/ 目录中
+// 首先您要确保熊猫模拟器的目录中有一个 log 文件夹, 没有的话必须手动创建, 
+// 否则日志文件将不会产生.
+// 
+// 1: 记录控制台中以  [Warning] 开头的警告信息
+// 2: 记录控制台中以  [Error]   开头的错误信息和数据库错误信息
+// 4: 记录控制台中以  [Debug]   开头的调试信息
+// 
+// 例如: 想要记录 [Warning]、[Error]、[Debug] 开头的信息, 
+//       只需要将1、2、4相加, 将 console_msg_log 设置为 7 即可 (1+2+4)! 
+// 
+// 日志信息的记录, 并不会被 console_silent 选项影响.
+// 也就是说, 假如 console_msg_log 设置为 2 想记录 [Error] 信息,
+// 而在 console_silent 中设置为 16 想隐藏 [Error] 信息, 此时系统
+// 将会隐藏[Error]信息, 与此同时记录[Error]信息
 console_msg_log: 0
 
-// File path to store the console messages above
+// 将地图服务器在控制台中产生的要记录的信息, 写到下面指定的日志文件中
 console_log_filepath: ./log/map-msg_log.log
 
-//Makes server output more silent by omitting certain types of messages:
-//1: Hide Information messages
-//2: Hide Status messages
-//4: Hide Notice Messages
-//8: Hide Warning Messages
-//16: Hide Error and SQL Error messages.
-//32: Hide Debug Messages
-//Example: "console_silent: 7" Hides information, status and notice messages (1+2+4)
+// 选择性隐藏地图服务器控制台中显示出来的一些提示信息: 
+// 1:  隐藏控制台中以  [Info]    开头的提示信息
+// 2:  隐藏控制台中以  [Status]  开头的状态信息
+// 4:  隐藏控制台中以  [Notice]  开头的注意信息
+// 8:  隐藏控制台中以  [Warning] 开头的警告信息
+// 16: 隐藏控制台中以  [Error]   开头的错误信息和数据库错误信息
+// 32: 隐藏控制台中以  [Debug]   开头的调试信息
+// 若您想同时隐藏多种信息, 只需要将其对应的数字相加即可
+// 例如: 若您想要隐藏[Info]、[Status]、[Notice]开头的信息, 
+//       那么只需要将1、2、4相加, 填写 7 即可 (1+2+4)
 console_silent: 0
 
-//Where should all database data be read from?
+// DB 文件放在哪个目录中 (就是那个里面存放着 const.txt 的目录)
+// 您可以在此修改 DB 文件存放的目录名称
 db_path: db
 
-// Enable the @guildspy and @partyspy at commands?
-// Note that enabling them decreases packet sending performance.
+// 是否启用 @guildspy 和 @partyspy 指令? 
+// 注意: 启用这两个指令会降低封包的发送性能, 请酌情处理
 enable_spy: no
 
-// Read map data from GATs and RSWs in GRF files or a data directory
-// as referenced by grf-files.txt rather than from the mapcache?
+// 是否从 grf-files.txt 所配置的 GRF 文件或者 data 目录中
+// 读取地图数据 (例如: Gat 文件 和Rsw 文件), 而不是从地图缓存文件中读取? 
+// 
+// 问: 地图缓存文件的位置是? 
+// 答: 复兴前在 db\pre-re\map_cache.dat 复兴后在 db\re\map_cache.dat
 use_grf: no
 
-// Console Commands
-// Allow for console commands to be used on/off
-// This prevents usage of >& log.file
+// 是否允许在地图服务器的控制台中直接输入指令
+// 开启控制台指令后, 您可以在 map-server 的控制台中输入命令
+// 
+// 在地图服务器的控制台中输入 help 然后回车, 可以查看指令说明
+// 比如: 输入 admin:@reloadscrpit 可以直接让地图服务器重载所有脚本
+// 
+// 想要启用这个功能的话, 请将下面的值改成on即可
+// 若启用, 那么请避免在控制台中使用 ">& 日志文件.log" 这样的输出指令
 console: off
 
-// Database autosave time
-// All characters are saved on this time in seconds (example:
-// autosave of 60 secs with 60 characters online -> one char is saved every 
-// second)
+// 每一轮自动存档的时间间隔 (以秒为单位)
+// 在线的全部玩家数据都会在设定的时间内被自动存档
+// 注意: 当你设定为 300 秒保存一轮的情况下, 如果有 300 个玩家在线, 
+//       那么每秒钟会保存1个玩家的数据.
 autosave_time: 300
 
-// Min database save intervals (in ms)
-// Prevent saving characters faster than at this rate (prevents char-server 
-// save-load getting too high as character-count increases)
+// 最小存档的间隔时间 (以毫秒为单位)
+// 此选项可防止一个角色在短时间内被频繁存档, 在线人数非常多的服务器
+// 利用此选项可以大幅降低角色服务器和地图服务器的存档压力
 minsave_time: 100
 
-// Apart from the autosave_time, players will also get saved when involved
-// in the following (add as needed):
-// 1: after every successful trade
-// 2: after opening vending/every vending transaction
-// 4: after closing storage/guild storage.
-// 8: After hatching/returning to egg a pet.
-// 16: After successfully sending a mail with attachment
-// 32: After successfully submitting an item for auction
-// 64: After successfully get/delete/complete a quest
-// 128: After every bank transaction (deposit/withdraw)
-// 256: After every attendance reward
-// 4095: Always
-// NOTE: These settings decrease the chance of dupes/lost items when there's a
-// server crash at the expense of increasing the map/char server lag. If your 
-// server rarely crashes, but experiences interserver lag, you may want to set
-// these off.
+// 除了 autosave_time 指定的自动存档之外, 
+// 当玩家进行下列操作行为之后, 应该立刻马上执行存档过程: 
+// 
+// 1:    每次和另外一个玩家交易成功
+// 2:    每次成功开启露天商店/露天商店有东西卖出
+// 4:    每次关闭个人仓库/公会仓库
+// 8:    每次宠物被孵化/变回蛋状态
+// 16:   每次成功的发送了一封带有附件的邮件
+// 32:   每次成功的在拍卖行提交一个物品
+// 64:   每次接到/删除/完成一个任务
+// 128:  每次完成随身银行的存钱/取钱操作
+// 256:  每次获得签到奖励之后
+// 4095: 以上全部时机都要立刻执行数据的存档过程
+// 
+// 提示: 此选项可以在一些经常崩溃的服务端上, 起到很重要的保存作用.
+//       通过增加一些关键的保存时机, 来避免玩家的数据丢失.
+//
+//       不过若您的服务端程序很少发生崩溃, 那么可以尽量减少保存时机,
+//       以此来降低内部服务器的通讯延迟. 因为保存数据需要服务器之间
+//       很多内部数据传递和联动. 
 save_settings: 4095
 
-// Message of the day file, when a character logs on, this message is displayed.
+// 聊天栏公告信息配置文件的路径
+// 当角色登入游戏后, 里面的信息会显示在聊天栏
 motd_txt: conf/motd.txt
 
-// When @help or @h is typed when you are a gm, this is displayed for helping new gms understand gm commands.
+// 当游戏管理员使用 @help 或 @h 指令时
+// 会从下面的配置文件中加载相关的指令说明显示到聊天栏
 help_txt: conf/help.txt
 help2_txt: conf/help2.txt
 charhelp_txt: conf/charhelp.txt
 
-// Load channel config from
+// 频道系统的配置文件
 channel_conf: conf/channels.conf
 
-// Maps:
+// 地图相关的配置文件
+// 在很久很久以前并没有 maps_athena.conf 这个配置文件
+// 那时候用来决定 map-server 会加载什么地图, 都是直接写在这 map_athena.conf 个文件的底部
+// 
+// 不过后来由于地图是在太多了, rAthena 也实现了配置文件的 import 机制
+// 所以就将 map-server 会加载什么地图的配置, 单独放到了 maps_athena.conf 里面
 import: conf/maps_athena.conf
 
 //===================================
-// Pandas 拓展设置
+// 熊猫模拟器拓展设置
 //===================================
-// 配置想要使用的封包混淆密钥
+// 定义您想要使用的封包混淆密钥
 // 
-// 从 v1.7.2 版本开始, rAthena 官方放弃了 db/packet_db.txt 文件
-// 以后在这里配置自定义的封包混淆密钥(若不配置, 则自动使用韩服官方客户端默认的混淆密钥).
+// 从某个时间点开始, rAthena 官方放弃了 db/packet_db.txt 文件
+// 以后您可以在这里配置自定义的封包混淆密钥
+// 若不配置, 则自动使用韩服官方客户端默认的混淆密钥.
 //
 // 关闭封包混淆机制的服务端不受此选项影响
-// Pandas 默认开启混淆, 可在官网定制中关闭封包混淆功能.
+// 熊猫模拟器默认开启混淆, 可在官网定制中关闭封包混淆功能.
 // 
 // 不想修改的话, 请保持默认值: default
 // 若想修改的话, 格式为(英文逗号左右都不能有空格): 0x347D68D0,0x2C705320,0x7B4A199D
