--- a/conf/login_athena.conf
+++ b/conf/login_athena.conf
@@ -108,8 +108,21 @@ new_acc_length_limit: yes
 allowed_regs: 1
 time_allowed: 10
 
-// To log the login server?
-// NOTE: The login server needs the login logs to enable dynamic pass failure bans.
+// 是否记录登录服务器产生的日志?
+// 记录的日志包括以下内容, 这些内容会记录到数据库的 loginlog 表中:
+// 
+//   登录服务器启动时记录日志
+//   登录服务器关闭时记录日志
+//   某个用户的鼠标密码验证失败时记录日志
+//   某个用户登录成功
+//   某个用户登录失败
+//   角色服务器和登录服务器建立了连接
+//   某个被加入黑名单的IP地址对登录服务器发起连接请求
+// 
+// 设置为 yes 则表示记录日志(默认), 设置为 no 则表示不记录日志
+// 
+// 注意: 若设置为 no 的话会影响 ipban_enable 的功能,
+//       因为 ipban 依赖这里的登录日志, 来查询某 IP 在一段时间内的密码错误次数.
 log_login: yes
 
 // 登录服务器在需要显示时间的时候, 用什么格式显示?
