完全汉化角色服务器的主要配置文件

--- a/conf/char_athena.conf
+++ b/conf/char_athena.conf
@@ -180,27 +180,53 @@ gm_allow_group: 99
 // 保存间隔是由地图服务器配置文件中的 autosave_time 参数来决定的
 autosave_time: 60
 
-// Display information on the console whenever characters/guilds/parties/pets are loaded/saved?
+// 是否在控制台中显示出角色、公会、队伍、宠物的加载和保存信息?
+// 当在线人数非常多的时候, 导致相关加载和保存信息在控制台总飞速刷屏时,
+// 关闭此选项可以得到一点点的性能提升.
 save_log: yes
 
-// Starting point for new characters
-// Format: <map_name>,<x>,<y>{:<map_name>,<x>,<y>...}
-// Max number of start points is MAX_STARTPOINT in char.hpp (default 5)
-// Location is randomly picked on character creation.
-// NOTE: For Doram, this requires client 20151001 or newer.
-start_point: iz_int,18,26:iz_int01,18,26:iz_int02,18,26:iz_int03,18,26:iz_int04,18,26
-start_point_pre: new_1-1,53,111:new_2-1,53,111:new_3-1,53,111:new_4-1,53,111:new_5-1,53,111
+// 新创建的角色的出生坐标点
+// 格式为: <地图名称>,<x坐标>,<y坐标>{:<地图名称>,<x坐标>,<y坐标>...}
+// 
+// 熊猫模拟器编译时选择的工作模式, 会导致程序采用以下不同选项的值:
+// start_point     是复兴后的出生点
+// start_point_pre 是复兴前的出生点
+// 
+// 如果设置的出生点地图坐标不止一组的话 (冒号用来划分不同的坐标组), 
+// 那么服务器在玩家出生的时候, 会在设定的地图坐标中随机挑选一组作为玩家的出生点.
+//
+// 随机出生点的机制, 是官方服务器为了平衡地图服务器压力而设计的机制,
+// 但是在私服中, 我们一般没必要启用这样的出生点负载均衡机制,
+// 否则玩家会被分流到不同的镜像地图, 彼此无法直接相遇.
+//
+// 在 rAthena 官方的默认值中, 为复兴前和复兴后分别设置了 5 组出生点, 值如下:
+// start_point: iz_int,18,26:iz_int01,18,26:iz_int02,18,26:iz_int03,18,26:iz_int04,18,26
+// start_point_pre: new_1-1,53,111:new_2-1,53,111:new_3-1,53,111:new_4-1,53,111:new_5-1,53,111
+// 
+// 但是在熊猫模拟器看来这并非是必要的, 所以熊猫的默认值只使用一组坐标.
+// 注意: 杜兰族选项 start_point_doram 只有客户端版本大于等于 2015-10-01 才支持. 
+start_point: iz_int,18,26
+start_point_pre: new_1-1,53,111
 start_point_doram: lasa_fild01,48,297
 
-// Starting items for new characters
-// Max number of items is MAX_STARTITEM in char.cpp (default 32)
-// Format: <id>,<amount>,<position>{:<id>,<amount>,<position>...}
-// To auto-equip an item, include the position where it will be equipped; otherwise, use zero.
-// NOTE: For Doram, this requires client 20151001 or newer.
+// 新创建的角色身上携带的物品
+// 
+// 默认最多可以配置 32 个物品, 如果想进一步提高此处上限的话,
+// 请修改 src/char/char.cpp 中 MAX_STARTITEM 的值.
+// 
+// 格式为: <物品编号>,<数量>,<装备穿戴位置>{:<物品编号>,<数量>,<装备穿戴位置>:...}
+// 
+// 如果想自动穿戴某个物品的话,
+// 那么需要配置这个物品会装备在身上的哪个位置.
+// 
+// 如果让"装备穿戴位置"的值保持为 0 的话,
+// 那么这个物品会在背包里面躺着, 不会被自动穿戴.
+// 
+// 注意: 杜兰族选项 start_items_doram 只有客户端版本大于等于 2015-10-01 才支持. 
 start_items: 1201,1,2:2301,1,16
 start_items_doram: 1681,1,2:2301,1,16
 
-// 新创建的角色身上会有多少 Zeny (金币)?
+// 新创建的角色身上会有多少金币?
 // 
 // 注意: 这个地方配置的时候请慎重, 因为有一些玩家可能会创建大量账号
 // 然后转移里面的钱到某个主号上面, 以此达到刷钱的目的
@@ -240,7 +266,14 @@ guild_exp_rate: 100
 // 建议保持默认即可, 实际上很少碰到传说中的"未知的角色"
 unknown_char_name: Unknown
 
-// To log the character server?
+// 是否记录角色服务器产生的日志?
+// 记录的日志包括以下内容, 这些内容会记录到数据库的 charlog 表中:
+// 
+//   玩家在什么时间建立了什么新角色, 名字叫什么
+//   玩家在什么时候选择了哪个角色进入了游戏
+//   玩家通过扩展系统的改名机制将自己的角色名称改成了什么
+// 
+// 设置为 yes 则表示记录日志(默认), 设置为 no 则表示不记录日志
 log_char: yes
 
 // 角色名称是否忽略大小写?
@@ -420,18 +453,18 @@ default_map_y: 191
 clan_remove_inactive_days: 14
 
 //===================================
-// RODEX
+// RODEX 邮件系统
 //===================================
-// After how many days should mails be returned to their sender?
-// 0: never return them
-// X: return them after X days
-// Default: 15
+// 若邮件超过多少天没被查收, 则退信给发送者?
+// 0: 永不退信
+// X: 超过 X 天没被查收则退信
+// 默认值为: 15 (即 15 天)
 mail_return_days: 15
 
-// How many days after a mail was returned to it's sender should it be deleted completely?
-// 0: never delete them
-// X: delete them X days after they were returned
-// Default: 15
+// 退信完成后过多少天会完全删除这封邮件?
+// 0: 永不删除
+// X: 退回 X 天后完全删除此邮件
+// 默认值为: 15 (即 15 天)
 mail_delete_days: 15
 
 import: conf/import/char_conf.txt
