--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -1,90 +1,131 @@
-// Athena InterServer configuration.
-// Contains settings shared/used by more than 1 server.
+﻿//--------------------------------------------------------------
+// 熊猫模拟器 - 内部通讯配置文件
+// 由熊猫模拟器开发团队翻译成中文并加以润色
+//--------------------------------------------------------------
+// 提示: 此配置文件中, 只要是以 // 作为开头的行, 都是注释信息. 
+// 注释信息您可以随意修改, 不会干扰服务器的任何行为. 
+//--------------------------------------------------------------
 
-// Options for both versions
-
-// Log Inter Connections, etc.?
+// 是否记录内部通讯日志? 
+// 这个选项启用后当一个公会被创建、被解散、占领新城池时
+// 都会往 char_server_db 选项所指向的 interlog 表写入日志信息
 log_inter: 1
 
-// Inter Log Filename
-inter_log_filename: log/inter.log
-
-// Level range for sharing within a party
+// 组队均分经验的等级限制
+// 队伍中级别最高的人和最低的人之间相差等级不能超过 15 级 (默认)
+// 否则就无法开启经验均分选项
 party_share_level: 15
 
-// You can specify the codepage to use in your MySQL tables here.
-// (Note that this feature requires MySQL 4.1+)
+// 您可以为 MySQL 的表指定特殊的编码. 
+// 注意: 这个特性只有在 MySQL 版本在 4.1 及更新的版本中才支持.
+// 下方的 login_codepage, ipban_codepage, log_codepage 等选项与此同理
 default_codepage: auto
 
-// For IPs, ideally under linux, you want to use localhost instead of 127.0.0.1
-// Under windows, you want to use 127.0.0.1.  If you see a message like
-// "Can't connect to local MySQL server through socket '/tmp/mysql.sock' (2)"
-// and you have localhost, switch it to 127.0.0.1
+// 接下来涉及到的几个 MySQL 数据库服务器的设置,
+// 若您的 MySQL 服务器和运行熊猫模拟器的同一台物理机器的话,
+// 请注意以下几点建议:
+// 
+// 1. 如果您将熊猫模拟器运行在 Linux 系统, 那么对 Linux 来说,
+//    理想情况下 IP 地址应该使用 localhost 而不是 127.0.0.1
+// 
+// 2. 如果您将熊猫模拟器运行在 Windows 系统,
+//    建议将 IP 地址设置为 127.0.0.1
+// 
+// 如果您在 Linux 系统下碰到类似:
+// Can't connect to local MySQL server through socket '/tmp/mysql.sock' (2)
+// 的错误提示, 那么请果断将 localhost 改成 127.0.0.1
 
-// MySQL Login server
+// 登录服务器专用
+// MySQL 主数据库的连接配置信息
+// 注意: login_server_ip 如果是域名, 那么禁止超过 63 个字符 (包括标点符号)
 login_server_ip: 127.0.0.1
 login_server_port: 3306
 login_server_id: ragnarok
 login_server_pw: ragnarok
 login_server_db: ragnarok
-login_codepage:
+login_codepage: auto
 login_case_sensitive: no
 
+// 登录服务器专用
+// IP 封禁数据库的连接配置信息
+// 注意: ipban_db_ip 如果是域名, 那么禁止超过 63 个字符 (包括标点符号)
 ipban_db_ip: 127.0.0.1
 ipban_db_port: 3306
 ipban_db_id: ragnarok
 ipban_db_pw: ragnarok
 ipban_db_db: ragnarok
-ipban_codepage:
+ipban_codepage: auto
 
-// MySQL Character server
+// 角色服务器专用
+// MySQL 主数据库的连接配置信息
+// 注意: char_server_ip 如果是域名, 那么禁止超过 63 个字符 (包括标点符号)
 char_server_ip: 127.0.0.1
 char_server_port: 3306
 char_server_id: ragnarok
 char_server_pw: ragnarok
 char_server_db: ragnarok
-char_codepage:
+char_codepage: auto
 
-// MySQL Map Server
+// 地图服务器专用
+// MySQL 主数据库的连接配置信息
+// 注意: map_server_ip 如果是域名, 那么禁止超过 63 个字符 (包括标点符号)
 map_server_ip: 127.0.0.1
 map_server_port: 3306
 map_server_id: ragnarok
 map_server_pw: ragnarok
 map_server_db: ragnarok
-map_codepage:
+map_codepage: auto
 
-// MySQL Log Database
+// 登录、地图服务器共用
+// MySQL 日志数据库的连接配置信息
+// 注意: log_db_ip 如果是域名, 那么禁止超过 63 个字符 (包括标点符号)
 log_db_ip: 127.0.0.1
 log_db_port: 3306
 log_db_id: ragnarok
 log_db_pw: ragnarok
 log_db_db: ragnarok
-log_codepage:
+log_codepage: auto
 log_login_db: loginlog
 
-// MySQL Reconnect Settings
-// - mysql_reconnect_type:
-//   1: When MySQL disconnects during runtime, the server tries to reconnect
-//      mysql_reconnect_count times and shuts down if unsuccessful.
-//   2: When mysql disconnects during runtime, it tries to reconnect indefinitely.
+// MySQL 掉线重连策略
+// 如果由于某些原因导致熊猫模拟器和 MySQL 数据库服务器断开连接,
+// 那么会按照下面配置的策略来尝试重新连接
+// 
+// 若 mysql_reconnect_type 被设置为 1 时: 
+// 
+//     那么当熊猫模拟器断开和数据库服务器的连接后,
+//     熊猫模拟器会尝试重连数据库服务器, 
+//     如果尝试了 mysql_reconnect_count 所指定的次数后还是失败, 
+//     那么相关服务器程序将自行关闭
+// 
+// 若 mysql_reconnect_type 被设置为 2 时(默认):
+//
+//     那么当熊猫模拟器断开和数据库服务器的连接后,
+//     熊猫模拟器会无限次尝试重连数据库
+// 
+// 提示: 这个选项没什么太大的必要改动, 建议维持默认
 mysql_reconnect_type: 2
 mysql_reconnect_count: 1
 
-// DO NOT CHANGE ANYTHING BEYOND THIS LINE UNLESS YOU KNOW YOUR DATABASE DAMN WELL
-// this is meant for people who KNOW their stuff, and for some reason want to change their
-// database layout. [CLOWNISIUS]
+// >>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<
+// >>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<
+// 
+// 注意注意: 请不要改变接下来的这些设置,
+// 除非您对数据库非常的了解, 并且知道自己在做什么事情.
+// 如果没有充分的理由建议您保持默认, 不要去修改他们.
+// 
+// >>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<
+// >>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<
 
-// ALL MySQL Database Table names
-
-// Login Database Tables
+// 登录服务器的数据库表名配置
 login_server_account_db: login
 ipban_table: ipbanlist
 
-// Shared
+// 全部服务器的数据库表名配置
 global_acc_reg_num_table: global_acc_reg_num
 global_acc_reg_str_table: global_acc_reg_str
 
-// Char Database Tables
+// 角色服务器的数据库表名配置
 char_db: char
 hotkey_db: hotkey
 scdata_db: sc_data
@@ -123,7 +164,7 @@ char_reg_num_table: char_reg_num
 clan_table: clan
 clan_alliance_table: clan_alliance
 
-// Map Database Tables
+// 地图服务器的数据库表名配置
 buyingstore_table: buyingstores
 buyingstore_items_table: buyingstore_items
 item_table: item_db
@@ -148,7 +189,25 @@ market_table: market
 roulette_table: db_roulette
 guild_storage_log: guild_storage_log
 
-// Use SQL item_db, mob_db and mob_skill_db for the map server? (yes/no)
+// 是否让地图服务器加载 SQL 版本的 item_db, mob_db 及 mob_skill_db? (yes/no)
+// 若改成 yes 的话, 地图服务器将不会再加载 db 目录中的 item_db.txt、
+// mob_db.txt 及 mob_skill_db.txt, 而是转而加载这些文件在数据库中对应的表.
+// 
+// 将此选项改成 yes 之前, 请先往 map_server_db 选项所指向的数据库导入
+// 以下的 SQL 脚本, 否则 map-server 将找不到物品和魔物等数据:
+// 
+// 无论复兴前后的版本, 请导入 sql-files\item_cash_db.sql
+// 无论复兴前后的版本, 请导入 sql-files\item_cash_db2.sql
+// 复兴前的版本, 请导入 sql-files\item_db.sql       复兴后请导入 sql-files\item_db_re.sql
+// 复兴前的版本, 请导入 sql-files\item_db2.sql      复兴后请导入 sql-files\item_db2_re.sql
+// 复兴前的版本, 请导入 sql-files\mob_db.sql        复兴后请导入 sql-files\mob_db_re.sql
+// 复兴前的版本, 请导入 sql-files\mob_db2.sql       复兴后请导入 sql-files\mob_db2_re.sql
+// 复兴前的版本, 请导入 sql-files\mob_skill_db.sql  复兴后请导入 sql-files\mob_skill_db_re.sql
+// 复兴前的版本, 请导入 sql-files\mob_skill_db2.sql 复兴后请导入 sql-files\mob_skill_db2_re.sql
+// 
+// 导入之后, 也就意味着 item_db 等信息都已经被搬入到 MySQL 数据库中了, 
+// 以后您想再修改 item_db 等信息时, 将不再是修改 db\[pre-]re\item_db.txt 文件了
+// 而是去 MySQL 数据库中直接更新对应的表
 use_sql_db: no
 
 inter_server_conf: inter_server.yml
