完整汉化 battle_athena.conf 战斗配置选项索引文件

--- a/conf/battle_athena.conf
+++ b/conf/battle_athena.conf
@@ -1,70 +1,68 @@
 ﻿//--------------------------------------------------------------
-// rAthena Battle Configuration File
-// Originally Translated by Peter Kieser <pfak@telus.net>
-// Made in to plainer English by Ancyker
-// Splitted up into multiple files by Skotlex.
+// 熊猫模拟器 - 战斗配置选项索引文件
+// 本配置文件由 Peter Kieser <pfak@telus.net> 初步翻译成英文
+// 由 Ancyker 最终全部翻译成全英文
+// 由 Skotlex 将此配置分割成多个配置文件, 并放在 battle 目录中
+// 由熊猫模拟器开发团队翻译成中文并加以润色
+//--------------------------------------------------------------
+// 提示: 此配置文件中, 只要是以 // 作为开头的行, 都是注释信息. 
+// 注释信息您可以随意修改, 不会干扰服务器的任何行为. 
 //--------------------------------------------------------------
 
-//General battle-related settings.
+// 熊猫模拟器拓展的配置文件
+import: conf/battle/pandas.conf
+
+// 战斗相关的配置文件
 import: conf/battle/battle.conf
 
-//Settings specific to the client.
+// 客户端特殊配置文件
 import: conf/battle/client.conf
 
-//General drop-related configs.
+// 物品掉落相关的配置文件
 import: conf/battle/drops.conf
 
-//Experience rates, exp penalties, stats and max level settings.
+// 经验倍率, 死亡时经验掉落惩罚, 属性点和最大等级配置文件
 import: conf/battle/exp.conf
 
-//GM levels, atcommands and hack-related configs.
+// GM 等级, GM 指令和防黑相关的配置文件
 import: conf/battle/gm.conf
 
-//Guild and WoE settings
+// 公会和公会城战配置文件
 import: conf/battle/guild.conf
 
-//Battleground settings
+// 战场配置文件
 import: conf/battle/battleground.conf
 
-//Item/card-specific and crafting related options.
+// 物品和卡片相关的特殊配置文件
 import: conf/battle/items.conf
 
-//Mob related configuration
+// 魔物相关的配置文件
 import: conf/battle/monster.conf
 
-//Party related configuration
+// 组队相关的配置文件
 import: conf/battle/party.conf
 
-//Pet related configuration
+// 宠物相关的配置文件
 import: conf/battle/pet.conf
 
-//Homunc related configuration
+// 人工生命体相关的配置文件
 import: conf/battle/homunc.conf
 
-//Player specific settings
+// 玩家相关的特殊配置文件
 import: conf/battle/player.conf
 
-//Skill related settings
+// 技能相关的配置文件// 技能相关的配置文件
 import: conf/battle/skill.conf
 
-//Status change related settings
+// 和玩家状态相关的配置文件
 import: conf/battle/status.conf
 
-//Feature control (on/off) settings
+// 功能开关配置文件
 import: conf/battle/feature.conf
 
-// Anything else that didn't fit anywhere else.
-// Includes duel, day/night, mute/manner, log settings.
+// 其他无法归类的选项, 都会被放在下面这个配置文件
+// 包括决斗机制、昼夜控制机制、禁言机制、日志设定等等
 import: conf/battle/misc.conf
 
-//Your custom config goes here.
+// 您自定义的配置, 可放在下面的配置文件中
 import: conf/import/battle_conf.txt
-
-//===================================
-// Pandas 拓展的战斗配置文件
-//===================================
-
-// 在此引入 Pandas 自定义的战斗配置选项
-// 目前的战斗配置选项比较少, 全部都放在 pandas.conf 中即可,
-// 未来战斗配置选项有很多个, 再考虑和 rAthena 官方一样进行配置文件拆分
-import: conf/battle/pandas.conf
